# threshold-timestamp-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SPEC.md  TASKS.md  docker-compose.yml  readme2.md
.github/: e2e.yml
.github/workflows/: e2e.yml  rust.yml
configs/: collector.toml  coordinator.toml  signer_1.toml  signer_2.toml  signer_3.toml
crates/client-cli/: Cargo.toml
crates/client-cli/src/: main.rs
crates/collector/: Cargo.toml
crates/collector/src/: config.rs  error.rs  main.rs  routes.rs  state.rs
crates/common/: Cargo.toml
crates/common/src/: event_client.rs  lib.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: config.rs  dkg.rs  error.rs  frost_bridge.rs  lib.rs  main.rs  routes.rs  session.rs  state.rs
crates/frost-core/: Cargo.toml
crates/frost-core/src/: lib.rs  secp256k1.rs
crates/frost-core/tests/: integration.rs
crates/nostr-transport/: Cargo.toml
crates/nostr-transport/src/: encrypt.rs  events.rs  filters.rs  lib.rs  relay.rs  types.rs
crates/signer-node/: Cargo.toml
crates/signer-node/src/: config.rs  dkg_state.rs  handler.rs  main.rs  nonce_map.rs
crates/web-ui/: Cargo.toml  tailwind.config.js
crates/web-ui/src/: api.rs  app.rs  lib.rs  main.rs
crates/web-ui/src/components/: file_upload.rs  footer.rs  hash_input.rs  icons.rs  mod.rs  navbar.rs  signer_table.rs  status_card.rs  token_display.rs  token_input.rs
crates/web-ui/src/pages/: admin.rs  mod.rs  signing.rs  verify.rs
crates/web-ui/style/: input.css
src/crypto/: mod.rs  secp256k1.rs
tests/: e2e.sh
web-ui/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
web-ui/app/: globals.css  layout.tsx  page.tsx
web-ui/app/admin/: page.tsx
web-ui/app/events/: page.tsx
web-ui/app/verify/: page.tsx
web-ui/components/: FileUpload.tsx  Footer.tsx  HashInput.tsx  Icons.tsx  Navbar.tsx  SignerTable.tsx  StatusCard.tsx  TokenDisplay.tsx  TokenInput.tsx
web-ui/lib/: api.ts
