[workspace]
members = [".", "crates/nostr-transport"]

[package]
name = "mpc-timestamp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "0.13.3", features = ["arithmetic"] }
sha2 = "0.10.8"
rand = "0.8.5"
axum = "0.7.5"
tokio = { version = "1.38", features = ["full"] }
nostr-sdk = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
