[workspace]
members = [
    ".",
    "crates/nostr-transport",
    "crates/common",
    "crates/frost-core",
    "crates/client-cli",
    "crates/coordinator",
    "crates/signer-node",
]

[workspace.dependencies]
nostr-sdk   = "0.34.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1.38", features = ["full"] }
thiserror   = "1"
uuid        = { version = "1", features = ["v4", "serde"] }

[package]
name    = "mpc-timestamp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-secp256k1-tr = { version = "2", features = ["serialization", "serde"] }
sha2               = "0.10"
rand               = "0.8"
axum               = "0.7.5"
nostr-sdk.workspace  = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true