[package]
name = "mpc-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json", "blocking"] } 
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
toml = "0.8" # Added this because you use toml::to_string_pretty

# PATH DEPENDENCIES MUST BE RELATIVE TO THIS FILE
common = { path = "../common" }
frost-core = { path = "../frost-core" }