[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = []
collector-client = ["dep:reqwest", "dep:tracing", "dep:tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"], optional = true }
tracing = { version = "0.1", optional = true }
tokio = { version = "1.38", features = ["rt"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
secp256k1 = { version = "0.29", features = ["global-context", "rand", "serde"] }