[package]
name = "nostr-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
nostr-sdk = { workspace = true, features = ["all-nips"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
common = { path = "../common" }
