[package]
name = "web-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "web-ui"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
# Leptos ecosystem
leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos_axum = { version = "0.7", optional = true }

# Local crates
common = { path = "../common" }
coordinator = { path = "../coordinator", optional = true }

# Server-side deps (SSR only)
axum = { version = "0.7.5", optional = true }
tokio = { workspace = true, optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
anyhow = { version = "1", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
dashmap = { version = "5", optional = true }
nostr-sdk = { workspace = true, optional = true }
nostr-transport = { path = "../nostr-transport", optional = true }

# Client-side deps (hydrate only)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["File", "FileList", "FileReader", "HtmlInputElement", "DragEvent", "DataTransfer"], optional = true }
js-sys = { version = "0.3", optional = true }
gloo-net = { version = "0.6", optional = true }

# Shared deps
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:js-sys",
    "dep:gloo-net",
]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:anyhow",
    "dep:coordinator",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:clap",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dashmap",
    "dep:nostr-sdk",
    "dep:nostr-transport",
]

[package.metadata.leptos]
output-name = "web-ui"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/input.css"
tailwind-input-file = "style/input.css"
tailwind-config-file = "tailwind.config.js"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-default-features = false
bin-default-features = false
